--- a/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
@@ -5,6 +5,11 @@
 
 @model MODAMS.Models.ViewModels.Dto.AssetsDTO
 
+@{
+    ViewData["TourPageKey"] = "Assets/Index";
+}
+
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["AssetList"]</h1>
@@ -24,11 +29,11 @@
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="text-start">
-                        <h4 class="m-0">@Model.StoreName</h4>
+                        <h4 data-tour="assets.storename" class="m-0">@Model.StoreName</h4>
                         @* <h5 class="m-0">@TempData["SubCategoryName"] (Count: @Model.TotalAssets())</h5> *@
 
                     </div>
-                    @Html.Raw(Model.StoreOwnerInfo)
+                    <div data-tour="assets.storeowner">@Html.Raw(Model.StoreOwnerInfo)</div>
                 </div>
             </div>
         </div>
@@ -38,10 +43,10 @@
             <div class="card-body project-list-table-container">
                 <div class="row">
                     <div class="col-md-2">
-                        <div class="form-group pb-1 d-flex align-items-center">
+                        <div data-tour="assets.filter" class="form-group pb-1 d-flex align-items-center">
                             <label asp-for="@Model.SubCategoryId" class="mr-2 mb-0" style="vertical-align: middle;">filter:</label>
                             <select asp-for="@Model.SubCategoryId" asp-items="@Model.CategorySelectList"
-                            class="form-control select2 form-select">
+                                    class="form-control select2 form-select">
                                 <option value="0">@Localizer["AllAssets"]</option>
                             </select>
                         </div>
@@ -58,8 +63,8 @@
                 }
                 <div class="mb-2">
                     <a asp-area="Users" asp-controller="Assets" asp-action="CreateAsset"
-                    asp-route-id="@Model.StoreId"
-                    class="btn btn-info-gradient trShadow @sDisabled">
+                       asp-route-id="@Model.StoreId"
+                       class="btn btn-info-gradient trShadow @sDisabled" data-tour="assets.create">
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
                         @Localizer["NewAsset"]
                     </a>
@@ -86,6 +91,8 @@
                                 string sIdentification = "";
                                 var isSomali = CultureInfo.CurrentUICulture.Name == "so";
                                 var sCategoryName = "";
+                                bool isLabeled = false;
+
 
                                 foreach (var asset in Model.assets)
                                 {
@@ -94,7 +101,7 @@
                                     sIdentification = asset.SubCategory.Category.CategoryName == "Vehicles" ? "Plate: " + asset.Plate : "SN: " + asset.SerialNo;
 
                                     sCategoryName = isSomali ? asset.SubCategory.SubCategoryNameSo : asset.SubCategory.SubCategoryName;
-                                    
+
                                     switch (asset.AssetStatusId)
                                     {
                                         case SD.Asset_Available:
@@ -118,12 +125,12 @@
                                         <td class="text-muted fs-15 fw-semibold">
                                             <span class="text-@sBackground">
                                                 <span class="mb-0 mt-1 badge rounded-pill bg-@sBackground-transparent text-@sBackground">
-                                                    @(isSomali ? asset.AssetStatus.StatusNameSo : asset.AssetStatus.StatusName)
+                                                    @(isSomali? asset.AssetStatus.StatusNameSo : asset.AssetStatus.StatusName)
                                                 </span>
                                             </span>
                                         </td>
                                         <td class="text-muted fs-15 fw-semibold">
-                                            <div class="d-flex align-items-stretch">
+                                            <div class="d-flex align-items-stretch" @(!isLabeled ? "data-tour=assets.actions" : "")>
                                                 <a asp-controller="Assets" asp-action="AssetInfo" asp-route-id="@asset.Id"
                                                    class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["AssetInformation"]">
                                                     <i class="fe fe-info"></i>
@@ -150,6 +157,9 @@
                                         </td>
                                     </tr>
                                 }
+
+                                if(!isLabeled)
+                                    isLabeled = true;
                             }
                         </tbody>
                     </table>
